# invoice-forge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.json.example  pyproject.toml  server.py
clients/: clients.json
static/: editor.css  editor.html  editor.js  invoice.css  pdf-template.html
