[project]
name = "invoice-forge"
version = "1.0.0"
description = "Self-hosted invoice editor for freelancers. FastAPI + Playwright PDF export. JSON-backed, zero database."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "playwright>=1.41",
    "httpx>=0.26",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
